# DLAI-langchain-short-courses

./: pyproject.toml
functions-tools-agents-with-langchain/: L1-openai_functions_student-Copy1.ipynb  L2-lcel-student.ipynb  L3-function-calling-student.ipynb  L4-tagging-and-extraction-student.ipynb  L5-tools-routing-apis-student.ipynb  L6-functional_conversation-student.ipynb  functions-tools-agents-with-langchain.url
